201031 expt move HTML reports from data/processed/ to reports/ directory

--- a/experiments/201031-database-v1.1-software-version-migration/201125-unmatched-species-taxonomy-trees.ipynb
+++ b/experiments/201031-database-v1.1-software-version-migration/201125-unmatched-species-taxonomy-trees.ipynb
@@ -60,8 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_out = Path('../../data/processed/') / exptname / nbname\n",
-    "processed_out.mkdir(exist_ok=True, parents=True)"
+    "outdir = Path('../../reports/') / exptname / nbname\n",
+    "outdir.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -666,7 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(processed_out / (nbname + '-report.html'), 'w') as f:\n",
+    "with open(outdir / (nbname + '-report.html'), 'w') as f:\n",
     "    f.write(REPORT_PRE)\n",
     "    \n",
     "    write_contents_table(f)\n",
